# bytecode-interpreter

./: .gitignore  CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  repomix-output.txt  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
include/: chunk.h  table.h  value.h
src/: chunk.c  compiler.c  debug.c  object.c  value.c
